# jakosoll

./: README.md
django_lab/: .env.dev  .env.prod  .gitignore  Dockerfile  Dockerfile.prod  conftest.py  docker-compose.prod.yml  docker-compose.yml  dumpdb.json  entrypoint.sh  pyproject.toml  pytest.ini  queries.py  requirements.txt  setup.cfg
django_lab/chat/: consumers.py  routing.py
django_lab/django_lab/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
django_lab/docs/_build/html/: index.html
django_lab/main/: adapter.py  admin.py  email_sender.py  forms.py  middleware.py  models.py  tasks.py  tests.py  urls.py  views.py
django_lab/main/management/commands/: dummyitems.py  email_scheduler.py
django_lab/main/migrations/: 0001_initial.py  0002_auto_20210124_0942.py  0003_product_available.py  0004_auto_20210125_0813.py  0005_product_vendor.py  0006_auto_20210130_1109.py  0007_auto_20210130_1121.py  0008_productsubscriber.py  0009_auto_20210214_1358.py  0010_auto_20210216_0038.py  0011_auto_20210219_1042.py  0012_auto_20210301_1801.py  0013_auto_20210228_2036.py  0014_viewconter.py
django_lab/main/templates/: base.html  greeting.html  index.html  login.html  login_update.html  product_add.html  product_detail.html  product_list.html  product_search.html  product_update.html
django_lab/main/templates/emails/: goods_subscription.html  greeting.html
django_lab/main/templatetags/: main_tags.py  server_time.py
django_lab/main/tests/: test_dummyitems.py  test_models.py  test_pytests.py  test_views.py
django_lab/nginx/: nginx.conf
(+5 files in other folders)
