[tool.poetry]
name = "django_lab"
version = "0.1.0"
description = "Study project for course \"Laboratory of Django dev\""
authors = ["Евгений <jako.soll@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
asgiref = "3.3.1"
certifi = "2020.12.5"
cffi = "1.14.4"
chardet = "4.0.0"
cryptography = "3.3.1"
defusedxml = "0.6.0"
Django = "3.1.5"
django-allauth = "0.44.0"
django-ckeditor = "6.0.0"
django-js-asset = "1.2.2"
idna = "2.10"
oauthlib = "3.1.0"
pycparser = "2.20"
PyJWT = "2.0.1"
python3-openid = "3.2.0"
pytz = "2020.5"
requests = "2.25.1"
requests-oauthlib = "1.3.0"
six = "1.15.0"
sqlparse = "0.4.1"
urllib3 = "1.26.3"
python-dotenv = "0.15.0"
amqp = "5.0.5"
APScheduler = "3.7.0"
billiard = "3.6.3.0"
celery = "5.0.5"
click = "7.1.2"
click-didyoumean = "0.0.3"
click-plugins = "1.1.1"
click-repl = "0.1.6"
kombu = "5.0.2"
prompt-toolkit = "3.0.15"
tzlocal = "2.1"
vine = "5.0.0"
wcwidth = "0.2.5"
django-redis = "4.12.1"
redis = "3.5.3"
django-celery-results = "^2.0.1"
django-celery-beat = "^2.2.0"
django-debug-toolbar = "^3.2"
pytest = "^6.2.2"
pytest-django = "^4.1.0"
pyflakes = "^2.2.0"
flake8 = "^3.8.4"
Sphinx = "^3.5.1"
sphinx-rtd-theme = "^0.5.1"
channels = "^3.0.3"
channels-redis = "^3.2.0"
django-stubs = "^1.7.0"
Faker = "^6.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
